main.css
/* 1 em = 16px!!! */

html {
    min-height: 100%;
    margin: 0;
    padding: 0;
}

.hidden {
    display: none;
}

/* Mobile-first, 320px min*/
body {
    background-image: url("https://user-images.githubusercontent.com/54642928/75304716-e0706b00-583b-11ea-99f7-41c7ef66ce82.jpg");
    background-repeat: no-repeat;
    background-size: 200% 100%;
    background-attachment: fixed;
    background-position: center;
}

h1 {
    font-family: 'Pacifico';
}

h2, h3, h4 {
    font-family: 'Poppins';
}

p, a, span, #name {
    font-family: 'Open Sans';
    font-size: 1rem;
}

a {
    font-size: .90em;
    cursor: pointer;
    text-decoration: none;
}

ul {
    list-style-type: none;
    text-align: center;
    background-color: rgba(60, 146, 82, .8);
    border: 1px solid black;
    border-radius: 1em;
    color: white;
}

footer {
    margin-top: .75em;
    text-align: center;
}

#app-name {
    margin-top: 3.0em;
    font-size: 2.5rem;
    text-align: center;
    color: #B92201;
}

#app-descrip, #app-guider {
    font-size: 1.2rem;
    color: #26002e;
}

#snap-link, #food-insecurity-link {
    background-color: rgba(254, 187, 63, .8);
    color: #ffffff;
    border: 1px solid white;
    border-radius: 1em;
    font-weight: bolder;
}

#food-insecurity-link {
    margin-top: .75em;
}

#zip-input, #submit-button {
    height: 1.5em;
    width: 10em;
    font-size: 1em;
}

#submit-button {
    margin-left: .5em;
    margin-top: .10em;
}

#error-msg { 
    display: none;
    font-size: 2em;
    color: darkred;
    margin-top: 0.5em;
}

#nav-food-insec {
    justify-content: center;
}

#address1, #address2 {
    font-size: .80em;
    line-height: 1em;
    padding-bottom: .5em;
}

#grocery-list {
    line-height: .80em;
    padding: 1em;
}

#store-name {
    margin-top: .5em;
    font-size: .85em;
    text-transform: capitalize;
}

#home-page-link1, #home-page-link2 {
    text-align: center;
}

 #food-insec1, #food-insec2 {
    display: flex;
    flex-direction: column;
    align-content: space-around;
    padding: .5em;
    font-size: 1rem;
    color: #26002e;
    font-weight: bolder;
 }

 #answer-1, #answer-2, #acknowledgements {
     padding: .5em;
 }

 #answer-1, #answer-2 {
    background-color: rgba(254, 187, 63, .8);
    color: #ffffff;
    border-radius: 1em;
 }

.landing-page {
    text-align: center; 
    overflow-y: hidden;
    position: relative;
    bottom: 2.0em;
}

.snap-page {
    text-align: center;
    position: relative;
    background-size: 200% 100%;
    bottom: 1em;
}

.zip-code-form {
    display: flex;
    flex-direction: row;
}

.map-placeholder {
    margin: auto;
    height: 300px;
    width: 300px;
}

.data-container {
    padding-top: 1.5em;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.snap-results {
    height: 300px;
    width: 300px;
    overflow-y: auto;
}

.home-nav-links {
    font-size: 20px;
    display: flex;
    flex-direction: column;
    line-height: 2.0;
}

/* Medium smartphones */ 
@media only screen and (min-width: 375px) {

.snap-results {
    width: 350px;
}

.map-placeholder {
    width: 360px;
}

} 

/* Large smartphones */
@media only screen and (min-width: 414px) {

.snap-results {
    padding: 1.5em;
}

}

/* iPads and Tablets */
@media only screen and (min-width: 768px) {
    
body {
    background-size: 110% 100%;
}

p, #zip-input, #submit-button {
    font-size: 1.5rem;
}

h3 {
    font-size: 2rem;
}

#app-name {
    font-size: 4rem;
    margin-top: 3.5em;
}

#app-descrip, #app-guider {
    font-size: 2rem;
}

#snap-link, #food-insecurity-link {
    font-size: 2rem; 
    margin-left: 2.0em;
    margin-right: 2.0em;
}

#food-insec1, #food-insec2 {
    font-size: 2rem;
}

.zip-code-form {
    justify-content: center;
}

.data-container {
    flex-direction: row-reverse;
}

.map-placeholder {
    height: 465px;
    width: 700px;
}

.snap-results {
    height: 500px;
    width: 450px;
    overflow-x: hidden;
    overflow-y: auto;
}

}


/* Desktop
@media only screen and (min-width: 1000px) {

}
*/

/* Larger Resolutions (Desktop) 
@media only screen and (min-width: 1000px) {

}
*/

